--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,13 @@
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
+    "@next-auth/mongodb-adapter": "^1.0.1",
     "@svgr/webpack": "^6.1.1",
     "graphql": "15.5.1",
+    "mongodb": "^4.2.1",
     "next": "11.0.1",
+    "next-auth": "^4.0.5",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-tsparticles": "^1.37.5"
