--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.7.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
+    "react-custom-events-hooks": "^0.0.0",
     "react-dom": "17.0.2",
     "react-tsparticles": "^1.37.5",
     "uuid": "^8.3.2"
