--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@next-auth/mongodb-adapter": "^1.0.1",
     "@svgr/webpack": "^6.1.1",
     "animate.css": "^4.1.1",
+    "fs": "^0.0.1-security",
     "graphql": "15.5.1",
     "mongodb": "^4.2.1",
     "next": "11.0.1",
