--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,8 @@
     "react": "17.0.2",
     "react-custom-events-hooks": "^0.0.0",
     "react-dom": "17.0.2",
+    "react-image-picker": "^1.1.1",
+    "react-smart-gallery": "^0.2.0",
     "react-tsparticles": "^1.37.5",
     "uuid": "^8.3.2"
   },
