--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@next-auth/mongodb-adapter": "^1.0.1",
     "@svgr/webpack": "^6.1.1",
     "animate.css": "^4.1.1",
+    "copy-button": "^2.0.0",
     "fs": "^0.0.1-security",
     "graphql": "15.5.1",
     "mongodb": "^4.2.1",
@@ -27,6 +28,7 @@
     "nodemailer": "^6.7.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-custom-events-hooks": "^0.0.0",
     "react-dom": "17.0.2",
     "react-image-picker": "^1.1.1",
