file upload done

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -12,3 +12,5 @@ GOOGLE_SECRET=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
 
 FACEBOOK_ID=338385747690567
 FACEBOOK_SECRET=a3a2a3eb8c6b62d603b2aea9c634c1fa
+
+NEXT_PUBLIC_FILESTACK_API_KEY=AOs79KssQaS0FSNw59kWJz
