--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@svgr/webpack": "^6.1.1",
     "animate.css": "^4.1.1",
     "copy-button": "^2.0.0",
+    "filestack-react": "^4.0.1",
     "fs": "^0.0.1-security",
     "graphql": "15.5.1",
     "mongodb": "^4.2.1",
@@ -31,6 +32,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-custom-events-hooks": "^0.0.0",
     "react-dom": "17.0.2",
+    "react-file-previewer": "^0.6.3",
     "react-image-picker": "^1.1.1",
     "react-smart-gallery": "^0.2.0",
     "react-tsparticles": "^1.37.5",
