--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "filestack-react": "^4.0.1",
     "fs": "^0.0.1-security",
     "graphql": "15.5.1",
+    "moment": "^2.29.1",
     "mongodb": "^4.3.0",
     "next": "11.0.1",
     "next-auth": "^4.1.0",
@@ -33,6 +34,7 @@
     "react-custom-events-hooks": "^0.0.0",
     "react-dom": "17.0.2",
     "react-file-previewer": "^0.6.3",
+    "react-file-viewer": "^1.2.1",
     "react-image-picker": "^1.1.1",
     "react-smart-gallery": "^0.2.0",
     "react-tsparticles": "^1.37.5",
